Fixed the issue where the page was jumping when QCign results some where below the top of thepage.

--- a/app/assets/stylesheets/dashboard/style.css.scss
+++ b/app/assets/stylesheets/dashboard/style.css.scss
@@ -104,3 +104,23 @@
   }
 
 }
+
+
+/* ADMIN STYLE START */
+.opportunities{
+  ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li{
+      padding: 20px;
+    }
+    li:hover{
+      background: rgba(185,195,200,.2);
+    }
+
+  ;
+  }
+}
+/* ADMIN STYLE END */
